# slurp

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  args_paths.json  launch_tu.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  user_config.json
conf/: args_basis.json  compute_all_masks.pbs  compute_all_masks_trex.sh  main_config.json  scores_from_tar.pbs  scores_from_tar_trex.sh  style_stack.qml
docs/: Makefile
docs/source/: conf.py  developer_guide.rst  index.rst  installation.rst  usage.rst
docs/source/apidoc/: modules.rst  slum.rst  slurp.rst
slum/: __init__.py  cli.py  slum.py
slum/shadows/: shadowmask.py
slum/stack/: stack_masks.py
slum/stats/cysrc/: c_stats.cpp  c_stats.h  stats.cpp  stats.pyx
slum/tools/: __init__.py  eoscale_utils.py  io_utils.py  misc.py  rasterize_OSM.py  scores.py
slum/urban/: urbanmask.py  urbanmask_eoscale.py
slum/vegetation/: eoscale_vegetationmask_pipeline.py  new_vegetationmask.py  vegetationmask.py
slum/water/: #watermask.py#  watermask.py  watermask_eoscale.py
slurp/: cli.py  slurp.py
slurp/masks/: __init__.py  shadowmask.py  urbanmask.py  vegetationmask.py  watermask.py
slurp/prepare/: aux_files.py  geometry.py  not_used.py  prepare.py  primitives.py  validity.py
slurp/shadows/: shadowmask.py
slurp/stack/: __init__.py  stack_masks.py
slurp/stats/cysrc/: c_stats.h  stats.cpp
slurp/tools/: __init__.py  eoscale_utils.py  io_utils.py  rasterize_OSM.py  scores.py  utils.py
slurp/urban/: __init__.py  urbanmask.py
slurp/vegetation/: __init__.py  vegetationmask.py
slurp/water/: watermask.py
tests/: __init__.py  config_tests.json  conftest.py  main_config_tests.json  test_slum.py  test_slurp.py  test_valid_shadowmask.py  test_valid_stackmask.py  test_valid_urbanmask.py  test_valid_vegetationmask.py  test_valid_watermask.py  utils.py  valid_shadowmask.sh  valid_urbanmask.sh  valid_vegmask.sh  valid_watermask.sh  validation.md  validation.py
