# Copyright (c) 2022, CNES (Y. TANGUY)
#
# This file is part of slurp
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# slurp setup configuration file

# package setup main metadata
[metadata]
name = slurp
author = Yannick TANGUY
author_email = yannick.tanguy@cnes.fr
url = https://github.com/CNES/slurp
description = simple land use maks
long_description = file:README.md
long_description_content_type = text/markdown
license_files = LICENSE
platform = any
keywords: slurp, LULC, mask, segmentation, classification
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Cython

[options]
python_requires = >=3.8


# Packages dependencies
install_requires =
    importlib           ; python_version>"3.8"
    argparse                      # Python Argument Parser
    argcomplete                   # Autocompletion Argparse
    rasterio
    scikit-image
    scikit-learn
    geopandas
    scikit-learn-intelex
    matplotlib
    Cython
    psutil


package_dir =
    . = slurp
packages = find:

[options.extras_require]
dev =
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    flake8>=3.9.1                 # General linter
    flake8-comprehensions>=3.4.0  # Check list/dict/set
    flake8-bugbear>=21.4.3        # Add some rules to flake8
    pylint                        # General linter
    setuptools_scm                # versions from git tag
    virtualenv
    configupdater
    twine                         # for pypi upload
    pytest
    pytest-cov
    tox

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

# deploy data from the designed directory into package
[options.package_data]cd
    slurp = data/*

# entry points cli scripts
[options.entry_points]
console_scripts =
    slurp = slurp.cli:main
    slurp_watermask = slurp.masks.watermask:main
    slurp_urbanmask = slurp.masks.urbanmask:main
    slurp_rasterize_OSM = slurp.tools.rasterize_OSM:main
    slurp_scores = slurp.tools.scores:main
    slurp_shadowmask = slurp.masks.shadowmask:main
    slurp_stackmasks = slurp.stack.stack_masks:main
    slurp_vegetationmask = slurp.masks.vegetationmask:main


# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist, tests/test_output, docs
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503
max-complexity = 15
max-line-length = 80
#show-source = true
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B
